--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        python-version: [3.9, 3.10.11, 3.11, 3.12]
+        python-version: [3.9]
         arch: ['x64']
     name: Build and Test on x64 with Python ${{ matrix.python-version }}
     steps:
