--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,11 +31,11 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pip-
             ${{ runner.os }}-        
-      - name: Install dependencies
+      - name: Install
         run: |
           # make sure pip is the lastest
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install --upgrade -r requirements.txt; fi
+          python -m pip install .
       - name: Run retrieverApp
         env:
           NCBI_API_EMAIL: ${{ secrets.NCBI_API_EMAIL }}
